# sftagger

./: LICENSE  Makefile  README  README.md  meson.build  sftagger  sftagger.1  sftagger.c
src/: hmap.c  hmap.h  impl.h  main.c  main.cpp  tagger.c  tagger.h
src/core/: create.cpp  create.h
src/impl/: file.c  str.c
src/tools/: argumentsToVector.cpp  argumentsToVector.h  homeDirectory.cpp  tools.h
